--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "ignore-styles": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
