--- a/package.json
+++ b/package.json
@@ -14,30 +14,47 @@
     "@babel/cli": "^7.23.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "clean-webpack-plugin": "^4.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "ignore-styles": "^5.0.1",
+    "isomorphic-git": "^1.29.0",
     "jsonwebtoken": "^9.0.2",
+    "language-detect": "^1.1.0",
+    "linguist-js": "^2.8.1",
     "moment-timezone": "^0.5.45",
+    "monacopilot": "^0.12.9",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
-    "react-dom": "^18.2.0"
+    "tailwindcss": "^3.4.17",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/register": "^7.23.7",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^3.3.4",
-    "svg-inline-loader": "^0.8.2",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^9.2.1",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
+    "postcss-loader": "^8.1.1",
+    "autoprefixer": "^10.4.20",
+    "webpack-dev-server": "^5.2.0",
+    "typescript": "^5.7.2",
+    "ts-loader": "^9.5.1",
+    "file-loader": "^6.2.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "html-webpack-plugin": "^5.6.3",
+    "url-loader": "^4.1.1",
+    "prettier": "^3.4.2",
+    "clean-webpack-plugin": "^4.0.0"
   }
 }
