--- a/package.json
+++ b/package.json
@@ -25,36 +25,38 @@
     "jsonwebtoken": "^9.0.2",
     "language-detect": "^1.1.0",
     "linguist-js": "^2.8.1",
+    "mkcert": "^3.2.0",
     "moment-timezone": "^0.5.45",
     "monacopilot": "^0.12.9",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
-    "tailwindcss": "^3.4.17",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "redis": "^5.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@babel/preset-react": "^7.26.3",
-    "babel-loader": "^9.2.1",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
-    "css-loader": "^7.1.2",
-    "style-loader": "^4.0.0",
-    "postcss-loader": "^8.1.1",
+    "@babel/preset-react": "^7.26.3",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
-    "webpack-dev-server": "^5.2.0",
-    "typescript": "^5.7.2",
-    "ts-loader": "^9.5.1",
-    "file-loader": "^6.2.0",
+    "babel-loader": "^9.2.1",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
-    "url-loader": "^4.1.1",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
-    "clean-webpack-plugin": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.7.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
