refactor(services): improve service initialization and error handling
- Refactor Redis and PubSub services to use singleton pattern and better connection management
- Implement RabbitMQ client as a singleton with connection retries and error handling
- Update transpile worker to use SSE for progress updates
- Improve error handling and logging across services
- Update docker-compose to use root directory for builds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   node-backend:
-    build: ./node-server
+    build: ./
     container_name: node-backend
     ports:
       - "3005:3005"  # Uses value from .env #
     env_file:
-      - ./node-server/.env
+      - ./.env
     volumes:
-      - ./node-server:/app  # Mounts the local node-server directory to the container's /app directory
+      - ./:/app  # Mounts the local node-server directory to the container's /app directory
       - /app/node_modules  # Protects the container’s dependency folder from being overwritten by the host and allows it to persist across runs, isolating it from local file system issues.
       - s3_storage:/app/s3_storage  # Mounts the local s3_storage directory to the container's /app/s3_storage directory for persistance
     networks:
